--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* POLICY */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
 /* RESET && GLOBAL */
 *{
   margin: 0;
@@ -7,8 +10,50 @@
 
 a{
   text-decoration: none;
+  color: inherit;
 }
 
 li{
   list-style: none;
+}
+
+header, main, footer{
+  font-family: 'Roboto', sans-serif;
+}
+
+/* TOPBAR */
+.topbar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 80px;
+  color: white;
+  border-bottom: 1px solid;
+  transition: all 0.6s ease-in-out;
+}
+
+.topbar:hover{
+  background-color: rgba(33, 33, 33, 0.3);
+}
+
+.topbar > h1{
+  margin-left: 40px;
+}
+
+.topbar-list{
+  display: flex;
+  margin-right: 40px;
+  letter-spacing: 0.5px;
+  font-size: 12px;
+  font-weight: 400;
+  color: white;
+}
+
+.topbar-item{
+  padding: 0 8px;
+}
+
+.topbar-active{
+  color: black;
 }
