--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ header, main, footer{
   width: 100%;
   height: 80px;
   color: white;
-  border-bottom: 1px solid;
   transition: all 0.6s ease-in-out;
 }
 
@@ -166,6 +165,9 @@ header, main, footer{
   width: 50%;
   height: auto;
   margin-left: 80px;
+  box-shadow: 4px 4px 3px rgba(33, 33, 33, 0.6);
+  border-radius: 4px;
+  filter: grayscale(80%);
 }
 
 .about-para{
@@ -176,5 +178,29 @@ header, main, footer{
 }
 
 .about-para > p{
-  line-height: 40px;
+  color: rgba(33, 33, 33, 0.8);
+  line-height: 30px;
+}
+
+.cards{
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin: 80px auto;
+}
+
+.card{
+  width: 30%;
+  height: auto;
+  color: rgba(33, 33, 33, 0.8);
+  font-size: 14px;
+  line-height: 28px;
+}
+
+.card > h3{
+  padding: 2px 0;
+  margin: 16px 0;
+  border-bottom: 0.5px solid black;
+  text-align: left;
+
 }
