--- a/style.css
+++ b/style.css
@@ -53,15 +53,22 @@ header, main, footer{
 
 .topbar-list{
   display: flex;
+  align-items: center;
   margin-right: 40px;
   letter-spacing: 0.5px;
   font-size: 12px;
   font-weight: 400;
+  height: 100%;
   color: white;
 }
 
 .topbar-item{
-  padding: 0 8px;
+  padding: 30px 8px;
+  transition: all 0.5s ease-in-out;
+}
+
+.topbar-item:hover{
+  color: black;
 }
 
 .topbar-active{
