--- a/style.css
+++ b/style.css
@@ -223,7 +223,8 @@ header, main, footer{
 
 .about-us{
   display: flex;
-  margin-top: 200px;
+  padding-top: 100px;
+  margin-top: 100px;
   margin-bottom: 50px;
 }
 
