--- a/style.css
+++ b/style.css
@@ -280,3 +280,33 @@ header, main, footer{
   border-top: 1px solid rgb(32, 56, 33);
   padding: 20px 0;
 }
+
+/* WEDDING PICTURE SECTION */
+
+.wedding-pic{
+  position: relative;
+  background-image: url("https://images.pexels.com/photos/5005252/pexels-photo-5005252.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+  background-position: center;
+  background-size: cover;
+  width: 100vw;
+  height: 90vh;
+  box-shadow: 1px 2px 2px rgba(33, 33, 33, 1);
+  margin-bottom: 40px;
+  filter: grayscale(100%);
+}
+
+.wedding-quotes{
+  position: absolute;
+  top: 200px;
+  left: 50px;
+  font-family: 'Archivo Black', sans-serif;
+  color: white;
+  text-shadow: 1px 1px 1px black;
+}
+
+.wedding-quotes > h2{
+  font-size: 30px;
+  padding: 20px 0;
+}
+
+/* PRICES SECTION */
