--- a/style.css
+++ b/style.css
@@ -380,6 +380,7 @@ header, main, footer{
 /* FOOTER SECTION */
 
 .footer-section-1{
+  position: relative;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -407,4 +408,46 @@ header, main, footer{
 .footer-1-content p{
   margin-top: -20px;
   font-size: 16px;
+}
+
+.footer-btn{
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  padding: 7px 14px;
+  background-color: #203821;
+  font-size: 24px;
+  color: white;
+  border-radius: 6px 6px 0 0;
+  box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.5);
+  transition: all 0.4s ease-in-out;
+}
+
+.footer-btn:hover{
+  background-color: rgba(32, 56, 33, 0.6);
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.footer-section-2{
+  background-color: #131416;
+  width: 100vw;
+  height: 130px;
+  text-align: center;
+}
+
+.footer-social{
+  padding-top: 40px;
+  font-size: 18px;
+  color: white;
+}
+
+.footer-social > a{
+  margin: 0 12px;
+}
+
+.footer-2-content{
+  margin-top: 10px;
+  font-weight: lighter;
+  font-size: 14px;
+  color: #666666;
 }
