--- a/style.css
+++ b/style.css
@@ -458,7 +458,7 @@ header, main, footer{
 
 /* ANIMATION JS */
 
-.reveal{
+[class*="reveal-"]{
   opacity: 0;
   transform: translateY(30px);
 }
@@ -467,4 +467,16 @@ header, main, footer{
   opacity: 1;
   transform: translateY(0);
   transition: 0.6s cubic-bezier(.37,.01,.73,1);
+}
+
+.reveal-2{
+  transition-delay: .3s;
+}
+
+.reveal-3{
+  transition-delay: .5s;
+}
+
+.reveal-4{
+  transition-delay: .7s;
 }
