--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ li{
 }
 
 body{
+  max-width: 100vw;
+  min-width: 100vw;
   overflow-x: hidden;
 }
 
@@ -26,9 +28,9 @@ header, main, footer{
   font-family: 'Roboto', sans-serif;
 }
 
-.main{
+/* .main{
   margin-top: 80px;
-}
+} */
 
 ::selection{
   background: rgb(32, 56, 33);
@@ -36,6 +38,12 @@ header, main, footer{
 }
 
 /* TOPBAR */
+
+.header{
+  width: 100vw;
+  height: 80px;
+}
+
 .topbar{
   position: fixed;
   top: 0;
@@ -67,7 +75,7 @@ header, main, footer{
   align-items: center;
   margin-right: 40px;
   letter-spacing: 0.5px;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 400;
   height: 100%;
   color: white;
@@ -103,12 +111,12 @@ header, main, footer{
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-top: 30px;
+  text-align: center;
 }
 
 .hero-title{
   margin-bottom: 10px;
-  font-size: 72px;
+  font-size: 5em;
   font-weight: bold;
   color: rgba(33, 33, 33, 0.3);
 }
@@ -119,11 +127,11 @@ header, main, footer{
 
 .hero-para-1{
   font-family: 'Archivo Black', sans-serif;
-  font-size: 139px;
+  font-size: 9em;
 }
 
 .hero-para-2{
-  font-size: 24px;
+  font-size: 1.5em;
   color: rgba(33, 33, 33, 0.3);
 }
 
@@ -307,7 +315,7 @@ header, main, footer{
   width: 100vw;
   height: 90vh;
   box-shadow: 1px 2px 2px rgba(33, 33, 33, 1);
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   filter: grayscale(100%);
 }
 
@@ -330,12 +338,11 @@ header, main, footer{
 #prices{
   width: 90%;
   margin: 0 auto;
-  margin-bottom: 80px;
   padding-top: 10px;
 }
 
 .prices-title{
-  margin-top: 70px;
+  margin-top: 100px;
   font-size: 28px;
   color: rgb(32, 56, 33);
 }
@@ -395,6 +402,10 @@ header, main, footer{
 
 /* FOOTER SECTION */
 
+#footer{
+  margin-top: 80px;
+}
+
 .footer-section-1{
   position: relative;
   display: flex;
@@ -426,6 +437,11 @@ header, main, footer{
 .footer-1-content p{
   margin-top: -20px;
   font-size: 16px;
+}
+
+#map{
+  width: 40%;
+  height: 70%;
 }
 
 .footer-btn{
@@ -494,4 +510,36 @@ header, main, footer{
 
 .reveal-4{
   transition-delay: .7s;
+}
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 1200px){
+  .about-us{
+    display: block;
+  }
+
+  .about-img{
+    display: flex;
+    width: 80%;
+    height: 70%;
+    margin: 20px auto;
+  }
+
+  .footer-section-1{
+    flex-flow: column;
+  }
+
+  .footer-1-content h3{
+    margin: 25px 0;
+  }
+
+  #map{
+    width: 70%;
+    height: 50%;
+  }
+}
+
+@media screen and (max-width: 350px){
+  
 }
