--- a/style.css
+++ b/style.css
@@ -19,8 +19,7 @@ li{
 }
 
 body{
-  max-width: 100vw;
-  min-width: 100vw;
+  position: relative;
   overflow-x: hidden;
 }
 
@@ -109,6 +108,7 @@ header, main, footer{
 
 .hero-banner{
   display: flex;
+  width: 100vw;
   align-items: center;
   flex-direction: column;
   text-align: center;
@@ -159,7 +159,7 @@ header, main, footer{
 .hero-animation{
   position: relative;
   top: -30px;
-  width: 100%;
+  width: 100vw;
   z-index: -10;
 }
 
@@ -540,6 +540,58 @@ header, main, footer{
   }
 }
 
-@media screen and (max-width: 350px){
-  
+@media screen and (max-width: 400px){
+  .topbar{
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .topbar > h1{
+    font-size: 24px;
+    margin: 5px 0 0 0;
+    text-align: center;
+  }
+
+  .topbar-list{
+    margin-right: 0;
+  }
+
+  .topbar-item{
+    font-size: 10px;
+    padding: 0 5px;
+  }
+
+  .hero-title{
+    font-size: 2em;
+  }
+
+  .hero-para-1{
+    font-size: 5em;
+  }
+
+  .hero-buttons > a{
+    margin: 0 10px;
+  }
+
+  .hero-animation > img{
+    width: 210px;
+    height: auto;
+  }
+
+  .cards{
+    flex-flow: column;
+  }
+
+  .card{
+    width: 90%;
+  }
+
+  .wedding-quotes > h2{
+    font-size: 1.5em;
+  }
+
+  .wedding-quotes > h4{
+    font-size: 1em;
+  }
 }
