--- a/style.css
+++ b/style.css
@@ -540,7 +540,12 @@ header, main, footer{
   }
 }
 
-@media screen and (max-width: 400px){
+@media screen and (max-width: 800px){
+  body{
+    position: relative;
+    overflow-x: hidden;
+  }
+
   .topbar{
     flex-flow: column;
     justify-content: center;
